# velecs-math-cpp

./: .gitignore  CMakeLists.txt  Justfile  README.md
include/: vec2.hpp  vec3.hpp
include/velecs/math/: Consts.hpp  GLMUtility.hpp  Mat4.hpp  Quat.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
src/: GLMUtility.cpp  Mat4.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  vec2.cpp  vec3.cpp
src/test/: main.cpp
